--- a/Typora/themes/night-copy.css
+++ b/Typora/themes/night-copy.css
@@ -327,9 +327,8 @@ blockquote {
 
 pre {
 	/*   code block   */
-	font-size: 16px;
 	font-style: italic;
-	font-family: "SauceCodePro Nerd Font", Consolas, "Microsoft";
+	font-family: Consolas, "SauceCodePro Nerd Font", "Microsoft Yahei";
 }
 
 code,
