--- a/Typora/themes/base.user.css
+++ b/Typora/themes/base.user.css
@@ -3,3 +3,68 @@
 	font-style: italic;
 	font-family: Consolas, "SauceCodePro Nerd Font", "Source Code Pro", "Microsoft Yahei";
 }
+
+.outline-active {
+	/* background: gray; */
+	color: white;
+	font-weight: bold;
+}
+
+h1 {
+	font-size: 2.5rem;
+	/* 36px */
+	line-height: 2.75rem;
+	/* 40px */
+	margin-bottom: 1.5rem;
+	/* 24px */
+	letter-spacing: -1.5px;
+}
+h2 {
+	font-size: 1.7rem;
+	/* 24px */
+	line-height: 1.875rem;
+	/* 30px */
+	margin-bottom: 1.5rem;
+	/* 24px */
+	letter-spacing: -1px;
+	font-weight: bold;
+}
+h3 {
+	font-size: 1.35rem;
+	/* 18px */
+	line-height: 1.5rem;
+	/* 24px */
+	margin-bottom: 1.5rem;
+	/* 24px */
+	letter-spacing: -1px;
+	font-weight: bold;
+}
+h4 {
+	font-size: 1.3rem;
+	/* 16px */
+	line-height: 1.375rem;
+	/* 22px */
+	margin-bottom: 1.5rem;
+	/* 24px */
+	color: white;
+}
+h5 {
+	font-size: 1.2rem;
+	/* 16px */
+	line-height: 1.25rem;
+	/* 22px */
+	margin-bottom: 1.5rem;
+	/* 24px */
+	font-weight: bold;
+}
+h6 {
+	font-size: 1.05rem;
+	/* 16px */
+	line-height: 1.1rem;
+	/* 16px */
+	margin-bottom: 0.75rem;
+	color: white;
+}
+p {
+	font-size: 1.2em;
+}
