--- a/Typora/themes/night-copy.css
+++ b/Typora/themes/night-copy.css
@@ -85,11 +85,14 @@ div.code-tooltip,
 }
 
 html,
-body,
 button,
 input,
 select {
 	font-family: "Helvetica Neue", Helvetica, Arial, "Segoe UI Emoji", sans-serif;
+}
+body {
+	font-family: "Microsoft Yahei", Consolas, "SauceCodePro Nerd Font";
+	/* font-size: 18px; */
 }
 textarea {
 	/* font-size: 16px; */
@@ -143,7 +146,7 @@ h2 {
 }
 
 h3 {
-	font-size: 1.17rem;
+	font-size: 1.27rem;
 	/* 18px */
 	line-height: 1.5rem;
 	/* 24px */
@@ -154,7 +157,7 @@ h3 {
 }
 
 h4 {
-	font-size: 1.12rem;
+	font-size: 1.2rem;
 	/* 16px */
 	line-height: 1.375rem;
 	/* 22px */
@@ -164,7 +167,7 @@ h4 {
 }
 
 h5 {
-	font-size: 0.97rem;
+	font-size: 1.12rem;
 	/* 16px */
 	line-height: 1.25rem;
 	/* 22px */
@@ -174,7 +177,7 @@ h5 {
 }
 
 h6 {
-	font-size: 0.93rem;
+	font-size: 0.97rem;
 	/* 16px */
 	line-height: 1rem;
 	/* 16px */
@@ -242,6 +245,8 @@ sup.md-footnote {
 p {
 	-ms-word-wrap: break-word;
 	word-wrap: break-word;
+	font-size: 1.16rem;
+	/* font-size: 18px; */
 }
 
 p,
